chapter2/1.8/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-t108
spec:
  type: ClusterIP
  selector:
    app: kube-t108
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
